# skill-count-on-fingers

./: README.md  pyproject.toml
.github/workflows/: testing.yml
countup/: __main__.py  core.py
tests/: test_core.py  test_main.py
tests/resources/csv/: example.csv
tests/resources/csv/expected/: column1.csv  column2.csv
tests/resources/jsonlines/: example.jsonl
